clusters/aks-dev/services/currency-exchange/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: currency-exchange
  namespace: dev-services
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2   # keep only if app doesn’t support a basePath
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /currency(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: currency-exchange
            port:
              number: 8000
